tests/reference/asr-index_non_integer_subarray2-48131d8.stderr
semantic error: Array end index must be of type integer
 --> tests/errors/index_non_integer_subarray2.f90:4:18
  |
4 |     print *, x(1:2.3)
  |                  ^^^ 
